feat/add theme color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Vite + Vue + TS</title>
 		<link rel="stylesheet" href="./src/styles/tailwind.css" />
 	</head>
-	<body>
+	<body class="bg-theme">
 		<div id="app"></div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
