--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Vite + Vue + TS</title>
 		<link rel="stylesheet" href="./src/styles/tailwind.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
-	<body class="bg-theme">
+
+	<body class="bg-theme font-sans tracking-wide">
 		<div id="app"></div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
