feat/add hero section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		/>
 	</head>
 
-	<body class="bg-theme font-sans tracking-wide">
+	<body class="bg-theme-secondary font-sans tracking-wide">
 		<div id="app"></div>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
